--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
             "database"
         ],
         "psr-4": {
-            "softwork\\": "app/"
+            "Softwork\\": "app/"
         }
     },
     "autoload-dev": {
